--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "git": "^0.1.5"
+    "@testing-library/jest-dom": "^5.14.1",
+    "git": "^0.1.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "web-vitals": "^2.1.1"
   }
 }
