initialized files & text

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-app-2021",
+  "name": "Node.js-movie-app-2021",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
