changed project name

--- a/movie_app_2021/package.json
+++ b/movie_app_2021/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Node.js-movie-app-2021",
+  "name": "movie-recommendation-platform-2021",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
